--- a/app/src/scss/_accordion.scss
+++ b/app/src/scss/_accordion.scss
@@ -1,12 +1,13 @@
-@mixin acardion_text($size, $weight, $height, $family, $color) {
+@mixin accordion_text($size, $weight, $height, $family, $color) {
   font-size: $size;
   font-weight: $weight;
   line-height: $height;
   font-family: $family;
   color: $color;
 }
-.acardion {
+.accordion {
   .item {
+    user-select: none;
     border-bottom: 1px solid #e4e4e4ff;
     margin-bottom: 3%;
 
@@ -19,7 +20,7 @@
         color: $infoiconcol;
       }
       h5 {
-        @include acardion_text(
+        @include accordion_text(
           24px,
           500,
           28.8px,
@@ -29,13 +30,8 @@
       }
     }
     .content {
-      overflow: hidden;
-      max-height: 0;
-      transition-duration: 0.5s;
-      transition-delay: 0s;
-      transition-timing-function: ease;
       p {
-        @include acardion_text(
+        @include accordion_text(
           16px,
           400,
           24px,
@@ -43,10 +39,6 @@
           $card_module_info
         );
       }
-    }
-
-    .show {
-      max-height: 9999px;
     }
   }
 }
