--- a/app/src/scss/_howtobegin.scss
+++ b/app/src/scss/_howtobegin.scss
@@ -6,7 +6,7 @@
   color: $color;
 }
 .howto_begin_main {
-  padding: 100px 124px 100px 124px !important;
+  padding: 30px 124px !important;
   .col-md-12 {
     h2 {
       @include how_begin_text(
